latest commit june

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -25,9 +25,8 @@ if (flutterVersionName == null) {
 android {
     
     namespace "com.example.bloggie"
-    compileSdkVersion flutter.compileSdkVersion
-    ndkVersion flutter.ndkVersion
-
+    compileSdkVersion 34
+    
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
