--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,10 @@ dependencies:
   http: ^1.1.0
   provider: ^6.1.1
   html: ^0.15.4
+  share_plus: ^7.2.2
+  shared_preferences: ^2.2.3
+  flutter_riverpod: ^2.5.1
+  intl: ^0.19.0
 
 dev_dependencies:
   flutter_test:
